--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
                 <div id="canvasDiv" class="d-flex flex-column align-items-center justify-content-center h-100">
 
                     <h1>Your game code is: <span id="gameCodeDisplay"></span></h1>
-                    WASD to move | V to fire | B to jump
+                    WASD to move | V to jump | B to fire
                 </div>
             </div>
 
